--- a/PMDM/T2/Login/app/src/main/res/menu/main_menu.xml
+++ b/PMDM/T2/Login/app/src/main/res/menu/main_menu.xml
@@ -19,4 +19,9 @@
         android:id="@+id/menu_filtrar"
         />
 
+    <item
+        android:title="Ayuda"
+        android:id="@+id/menu_ayuda"
+        />
+
 </menu>
