--- a/PMDM/T3/Firebase/app/src/main/res/layout/activity_main.xml
+++ b/PMDM/T3/Firebase/app/src/main/res/layout/activity_main.xml
@@ -11,9 +11,25 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Crear usuario"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/botonBaseDatos"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Crear nodo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/botonUsuario" />
+    <Button
+        android:id="@+id/botonLectura"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Leer nodo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/botonBaseDatos" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
