--- a/DWEC/T5/inicio_angular/src/app/components/seleccion/seleccion.component.html
+++ b/DWEC/T5/inicio_angular/src/app/components/seleccion/seleccion.component.html
@@ -1,10 +1,54 @@
-<h2>Selecciona que quieres ver</h2>
+<!-- <h2>Selecciona que quieres ver</h2>
 <select class="form-select" [(ngModel)]="seleccionVista">
   <option value="1">Formulario</option>
   <option value="2">Principal</option>
+  <option value="3">Productos</option>
 </select>
 @switch (seleccionVista) { @case ("1") {
 <app-formulario></app-formulario>
 } @case ("2") {
 <app-informacion></app-informacion>
+} @case ("3") {
+<app-productos></app-productos>
 } }
+ -->
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" [routerLink]="['home']"
+            >Informacion</a
+          >
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['formulario']">Formulario</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" aria-disabled="true" (click)="navegar()"
+            >Productos</a
+          >
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+<select [(ngModel)]="seleccionCategoria">
+  <option>todas</option>
+  <option>smartphones</option>
+  <option>laptops</option>
+</select>
+<router-outlet></router-outlet>
