--- a/DWEC/T5/inicio_angular/src/app/components/seleccion/seleccion.component.html
+++ b/DWEC/T5/inicio_angular/src/app/components/seleccion/seleccion.component.html
@@ -42,6 +42,14 @@
             >Productos</a
           >
         </li>
+        <li class="nav-item">
+          <a
+            class="nav-link"
+            aria-disabled="true"
+            [routerLink]="['productosapi']"
+            >Productos API</a
+          >
+        </li>
       </ul>
     </div>
   </div>
