--- a/AD/codigos2324/T5/tienda/src/main/resources/templates/indice.html
+++ b/AD/codigos2324/T5/tienda/src/main/resources/templates/indice.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
 <h1>Esto es mi pagina inicial</h1>
-<a href="productosURL">Ver todos los productos</a>
+<a href="productosURL" class="btn btn-primary">Ver todos los productos</a>
 
 </body>
 </html>
