--- a/DWEC/curso2425/T5/tareas/src/app/components/tecnologias/tecnologias.component.html
+++ b/DWEC/curso2425/T5/tareas/src/app/components/tecnologias/tecnologias.component.html
@@ -1,1 +1,4 @@
 <p>tecnologias works!</p>
+<a class="btn btn-primary" routerLink="angular">Pulsar para ver angular</a>
+<a class="btn btn-primary" routerLink="react">Pulsar para ver react</a>
+<router-outlet></router-outlet>
