--- a/PMDM/curso2425/T3/app/src/main/res/layout/fragment_main.xml
+++ b/PMDM/curso2425/T3/app/src/main/res/layout/fragment_main.xml
@@ -15,6 +15,23 @@
         android:text="Iniciada sesion"
         />
 
+    <TextView
+        android:textSize="30sp"
+        android:layout_marginTop="24dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/textoUsuario"
+        android:gravity="center"
+        android:text=""
+        />
+
+    <Button
+        android:id="@+id/btnConsulta"
+        android:layout_marginTop="24dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Consultar"
+        />
 
     <Button
         android:id="@+id/btnVolver"
